--- a/_config.yml
+++ b/_config.yml
@@ -1,43 +1,82 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
 # Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+title: Bonan Liu's CV 
+description: Bonan Liu, a software engineer with hands-on experience in distributed system and cloud computing.
+favicon: /assets/img/avatar.JPG
+baseurl: https://liubonan.github.io
+url: https://liubonan.github.io
+rss_url: /pages/atom.xml
+google_analytics: UA-105173916-1
 
 # Build settings
 markdown: kramdown
-theme: minima
-plugins:
-  - jekyll-feed
 
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+exclude: [vendor]
+
+# Author settings
+author:
+  name: Bonan Liu
+  title: Software Engineer
+  address: Seattle, WA, United States
+  email: liubonan#liubonan.com
+  link: http://liubonan.info
+  weibo:  
+  github: liubonan
+  linkedin: liubonan
+  twitter: 
+  gavatar: /resumecard/assets/img/avatar.JPG
+  stackoverflow:
+  workHistory:
+    - work1:
+      company: Google Inc.
+      location: Greater Seattle Area, WA, US
+      title: Software Engineer
+      started: 2015
+      duration: (2015 - Present)
+      description: I am not a description. I am not description.I am not description. I am not a description. I am not description.I am not description. I am not a description. I am not description.I am not description. I am not a description. I am not description.I am not description. I am not a description. I am not description.I am not description. I am not a description. I am not description.I am not description. I am not a description. I am not description.I am not description. I am not a description. I am not description.I am not description.
+    - work2:
+      company: Microsoft Corp.
+      location: Greater Seattle Area, WA, US
+      title: Software Development Engineer
+      started: 2013
+      duration: (2013 - 2015)
+      description: I am not a description. I am not description.I am not description. I am not a description. I am not description.I am not description. I am not a description. I am not description.I am not description. I am not a description. I am not description.I am not description. I am not a description. I am not description.I am not description. I am not a description. I am not description.I am not description. I am not a description. I am not description.I am not description. I am not a description. I am not description.I am not description.
+  educationHistory:
+    - education1:
+      organization: Columbia University
+      location: New York, NY, US
+      degree: Master of Science
+      major: Computer Science
+      started: 2011
+      duration: (2011 - 2013)
+      description: I am not a description. I am not description.I am not description. I am not a description. I am not description.I am not description. I am not a description. I am not description.I am not description. I am not a description. I am not description.I am not description. I am not a description. I am not description.I am not description. I am not a description. I am not description.I am not description. I am not a description. I am not description.I am not description. I am not a description. I am not description.I am not description.
+    - education2:
+      organization: Sichuan University
+      location: Chengdu, Sichuan, China
+      degree: Bachelor of Engineering
+      major: Compuater Science and Technology
+      started: 2007
+      duration: (2007-2011)
+      description: TBD
+  languages:
+    - language1:
+      name: Chinese
+      proficiency: Native
+    - language2:
+      name: English
+      proficiency: Professional
+  programmingSkills:
+    - skill1:
+      name: Java 
+      percentage: 100%
+    - skill2:
+      name: Go
+      percentage: 90%
+    - skill3:
+      name: Python
+      percentage: 70%
+    - skill4:
+      name: AngularJS
+      percentage: 70%
+    - skill5:
+      name: Java/Java EE
+      percentage: 90%
